[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordle"]

[project]
name = "wordle"
version = "1.0.0" # will never be updated, this just exists so that pyproject.toml is valid
description = "Wordle application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "platformdirs>=4.10.0",
]

[project.scripts]
wordle = "wordle.main:main"
