[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wordle"]

[project]
name = "wordle-gui"
version = "1.0.0" # will never be updated, this just exists so that pyproject.toml is valid
description = "Wordle application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.10.0",
]

[project.scripts]
wordle = "wordle_gui.main:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]
