[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/wordle_gui/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/wordle_gui"]

[project]
name = "wordle-gui"
dynamic = ["version"]
description = "Wordle application"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "platformdirs>=4.10.0",
    "pyside6>=6.11.1",
]

[project.scripts]
wordle = "wordle_gui.main:main"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "respx>=0.23.1",
    "ruff>=0.15.17",
]
